- Dashing near the borders of a Push Block from bellow will no longer auto-correct the player horizontally
- The player position icon on the In-Game map now render on top of markers
- Arrows and Climbable Vines are now working correctly with the invert grab mode
- The Lightning Dash ability now work correctly with the invert grab mode
- Fixed a bug preventing the player icon to be displayed on the In-Game map in interlude chapters
- Fixed a bug allowing some icons to be displayed before their corresponding abiltiy is unlocked on the In-Game map progress display
- Fixed a bug preventing the heat sound effect to stop if the inactive flag of the Heat Controller inside the room was true
- Fixed a bug that caused the oxygem timer to deplete when the In-Game map, Achievements, Abilities and Lore book screens were open
- Fixed a bug that could cause a bomb to spawn, but not being picked up when trying to jump and spawn a bomb at the same time
- Fixed a bug that could prevent the drone to be thrown correctly when trying to jump and spawn it at the same time
- Fixed a bug allowing to use both the Bag and Misc abilities selected at the same time, creating unintended behavior
- Fixed a crash when a Drone Missile or Beam got destroyed on top of a Conveyor
- Fixed a crash when releasing the Use Bag ability button at the same frame a bomb or mega bomb hold by the player would explode

Version 1.0.70 :
- Fixed a bug preventing bombs and mega bombs to use their whole explosion hitbox to activate touch switches

Version 1.0.69 :
- Fixed a crash when opening the In-Game map if it tried to display a room that no longer exist

Version 1.0.68 :
- Improved performances of the In-Game map Progress Display
- Improved performances of the In-Game map
- The title screen in The Secret Of Celeste Mountain should no longer be triggered when entering the prologue after a crash, potentially causing a softlock