@@ -16,6 +16,8 @@ namespace Celeste.Mod.XaphanHelper.Upgrades
 
         public static bool isActive;
 
+        public static bool canUse = true;
+
         public override int GetDefaultValue()
         {
             return 0;
@@ -77,15 +79,19 @@ namespace Celeste.Mod.XaphanHelper.Upgrades
                 if (isActive)
                 {
                     Player player = self.Tracker.GetEntity<Player>();
+                    if (player != null)
+                    {
+                        canUse = player.Holding != null ? true : self.Tracker.GetEntity<MegaBomb>() == null && player.OnGround();
+                    }
                     if (!cooldown && self.CanPause && !XaphanModule.PlayerIsControllingRemoteDrone() && player != null && player.StateMachine.State == Player.StNormal && !player.Ducking && XaphanModule.ModSettings.UseBagItemSlot.Pressed && !XaphanModule.ModSettings.UseMiscItemSlot.Pressed && !XaphanModule.ModSettings.OpenMap.Check && !XaphanModule.ModSettings.SelectItem.Check && !self.Session.GetFlag("Map_Opened") && player.Holding == null)
-                        {
+                    {
                         BagDisplay bagDisplay = GetDisplay(self, "bag");
                         if (bagDisplay != null)
                         {
                             int totalBombs = self.Tracker.CountEntities<MegaBomb>();
                             if (bagDisplay.currentSelection == 2 && delay <= 0f && totalBombs == 0)
                             {
-                                delay = 0.3f;
+                                delay = 0.35f;
                                 UseBombCoroutine = new Coroutine(UseBomb(player, self));
                             }
                         }
