@@ -5,6 +5,8 @@ namespace Celeste.Mod.XaphanHelper.Upgrades
 {
     class PortableStation : Upgrade
     {
+        public static bool canUse = true;
+
         public override int GetDefaultValue()
         {
             return 0;
@@ -53,6 +55,10 @@ namespace Celeste.Mod.XaphanHelper.Upgrades
                 if (isActive)
                 {
                     Player player = self.Tracker.GetEntity<Player>();
+                    if (player != null)
+                    {
+                        canUse = player.Speed == Vector2.Zero && player.OnSafeGround;
+                    }
                     if (self.CanPause && !XaphanModule.PlayerIsControllingRemoteDrone() && player != null && player.StateMachine.State == Player.StNormal && player.Speed == Vector2.Zero && !player.Ducking && !self.Session.GetFlag("In_bossfight") && player.OnSafeGround && XaphanModule.ModSettings.UseMiscItemSlot.Pressed && !XaphanModule.ModSettings.UseBagItemSlot.Pressed && !XaphanModule.ModSettings.OpenMap.Check && !XaphanModule.ModSettings.SelectItem.Check && !self.Session.GetFlag("Map_Opened") && player.Holding == null)
                     {
                         BagDisplay bagDisplay = GetDisplay(self, "misc");
